--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     href="https://fonts.googleapis.com/css2?family=Nabla&family=Noto+Sans+Mono&family=Playfair+Display:wght@400;700&family=Silkscreen&display=swap"
     rel="stylesheet">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="assets\images\favicon.ico">
+
 <body>
   <header>
     <!-- place navbar here -->
