--- a/index.html
+++ b/index.html
@@ -46,18 +46,13 @@
   <main>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-sm-4">
-          <img src="assets\images\Headshot-Professional.jpg" alt="Picture of a young man of latin descent in a suit"
-            class="profile-picture">
+        <div class="col-sm-3" style="background-color:white"></div>
+        <div class="col-sm-6">
+        <h1 class="title">Hi, my name is <strong>Gabriel Velasquez.</strong></h1>
+        <h3 class="subtitle">I'm a CS student and programmer.</h3>
+        <h3 class="subtitle">You can call me <strong>Gabe</strong>.</h3>
         </div>
-        <div class="col-sm-1"></div>
-        <div class="col-sm-5">
-          <h1 class="title">Hi, my name is <strong>Gabriel Velasquez.</strong></h1>
-          <h3 class="subtitle">I'm a CS student and programmer.</h3>
-          <h3 class="subtitle">You can call me <strong>Gabe</strong>.</h3>
-        </div>
-        <div class="col-md-1"></div>
+        <div class="col-sm-3" style="background-color:white"></div>
       </div>
     </div>
   </main>
