--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <title>Gabriel V</title>
   <!-- Required meta tags -->
@@ -74,14 +73,33 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3"></div>
-        <div class="col-sm-6">
-          <h1 class="title">Hi, my name is <strong>Gabriel Velasquez.</strong></h1>
-          <h3 class="subtitle">I'm a CS student and programmer.</h3>
-          <h3 class="subtitle">You can call me <strong>Gabe</strong>.</h3>
+        <div class="col-sm-6"></div>
+          <div id="like_button_container"></div>
+              <h1 class="title">Hi, my name is <strong>Gabriel Velasquez.</strong></h1>
+              <h3 class="subtitle">I'm a CS student and programmer.</h3>
+              <h3 class="subtitle">You can call me <strong>Gabe</strong>.</h3>
         </div>
         <div class="col-sm-3"></div>
       </div>
     </div>
+    <div class="card-container">
+      <div class="card">
+        <h2>Card Title</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum hendrerit quam, in suscipit risus auctor id.
+        </p>
+      </div>
+      <div class="card">
+        <h2>Card Title</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum hendrerit quam, in suscipit risus auctor id.
+        </p>
+      </div>
+      <div class="card">
+        <h2>Card Title</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum hendrerit quam, in suscipit risus auctor id.
+        </p>
+      </div>
+    </div>
+
   </main>
   <footer>
     <!-- place footer here -->
@@ -95,6 +113,15 @@
     integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
     crossorigin="anonymous"></script>
   <script src="script.js"></script>
+  <!-- Load React -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    
+    <!-- Load React component. -->
+    <script src="like_button.js"></script>
+
+    <!-- Adding JSX -->
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </body>
 
 </html>
